Fix brand color, add nav BG on small screens

--- a/_sass/widgets/_nav.scss
+++ b/_sass/widgets/_nav.scss
@@ -1,5 +1,6 @@
 body > nav {
 	text-align: right;
+	background: $brand;
 }
 
 body > nav a {
